UPDATED: Update astyle; update d_string

--- a/.astylerc
+++ b/.astylerc
@@ -21,7 +21,7 @@
 # Indent pre-processor directives
 --indent-preproc-block
 --indent-preproc-define
---indent-preproc-cond
+# --indent-preproc-cond
 
 
 # Line endings
@@ -42,12 +42,25 @@
 
 
 # Pointers/References
+--align-pointer=middle
 --align-reference=name
 
 
+# Line endings
+--lineend=linux
+
+
 # Excludes
---exclude="src/critic.c"
---exclude="src/smartenter.c"
---exclude="src/smartenter_parser.c"
+--exclude="Sources/libMultiMarkdown/scanners.c"
+--exclude="Sources/libMultiMarkdown/parser.c"
+--exclude="Sources/libMultiMarkdown/lexer.c"
+
+--exclude="Sources/libMultiMarkdown/i18n.h"
+--exclude="Sources/libMultiMarkdown/miniz.c"
+--exclude="Sources/libMultiMarkdown/miniz.h"
+--exclude="Sources/libMultiMarkdown/uthash.h"
+
+--exclude="Sources/multimarkdown/argtable3.c"
+--exclude="Sources/multimarkdown/argtable3.h"
 
 --ignore-exclude-errors
